--- a/index.html
+++ b/index.html
@@ -145,6 +145,37 @@
       color: #00ffb3;
     }
 
+    /* SECCIÓN POLÍTICAS PYME */
+    .politicas {
+      margin-top: 80px;
+      background-color: #111;
+      padding: 40px;
+      border-radius: 15px;
+      max-width: 900px;
+      box-shadow: 0 0 25px rgba(0,255,170,0.15);
+      text-align: left;
+    }
+
+    .politicas h2 {
+      text-align: center;
+      color: #00ffb3;
+      margin-bottom: 20px;
+    }
+
+    .politicas p, .politicas ul {
+      color: #ccc;
+      line-height: 1.7;
+    }
+
+    .politicas ul {
+      list-style-type: none;
+      padding-left: 0;
+    }
+
+    .politicas ul li::before {
+      content: "• ";
+      color: #00ffb3;
+    }
   </style>
 </head>
 <body>
@@ -174,7 +205,7 @@
 
   <!-- SECCIÓN NUEVA DEL PRODUCTO -->
   <div class="producto">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/3D_printing_example.jpg" alt="Figura impresa 3D">
+    <img src="https://titan13toy.com/cdn/shop/collections/Frame_1000007125.png?v=1756851164&width=1500" alt="Figura impresa 3D">
 
     <div class="producto-info">
       <h2>Figura 3D Personalizada</h2>
@@ -205,6 +236,26 @@
         <li><strong>Piernas:</strong> 5.7 cm (Pantorrilla 2 largo, Pie 0.5 largo)</li>
       </ul>
     </div>
+  </div>
+
+  <!-- SECCIÓN DE POLÍTICAS PYME -->
+  <div class="politicas">
+    <h2>Políticas de Apoyo a PYMEs en Chile</h2>
+    <p>
+      En Chile, la creación y desarrollo de micro, pequeñas y medianas empresas (PYMEs) está respaldada por distintas políticas públicas que fomentan el emprendimiento, la innovación y el acceso al financiamiento. Gracias a estas normativas, empresas como PrinteX pueden operar formalmente y crecer dentro de un marco legal seguro.
+    </p>
+
+    <ul>
+      <li><strong>1. Ley N° 20.416:</strong> Establece normas especiales para las micro y pequeñas empresas, simplificando su constitución y entrega de beneficios tributarios.</li>
+      <li><strong>2. SERCOTEC:</strong> Ofrece programas de capacitación, asesoría técnica y fondos concursables para emprendimientos nuevos.</li>
+      <li><strong>3. CORFO:</strong> Entrega apoyo financiero y técnico a PYMEs innovadoras mediante subsidios y créditos blandos.</li>
+      <li><strong>4. Empresa en un Día:</strong> Plataforma en línea que permite crear una empresa de manera rápida, gratuita y legal sin trámites presenciales.</li>
+      <li><strong>5. Ley de Reemprendimiento (Ley N° 21.563):</strong> Facilita la reorganización de empresas y protege al emprendedor ante crisis económicas.</li>
+    </ul>
+
+    <p>
+      Estas políticas permiten que proyectos como <strong>PrinteX</strong> puedan formalizarse, acceder a apoyo estatal y contribuir al desarrollo tecnológico del país.
+    </p>
   </div>
 
   <script>
