--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       ¿Quieres una figura completamente personalizada con tu rostro, tu personaje favorito o tu mascota?
       En PrinteX realizamos figuras únicas desde cero. Envíanos tu idea y te guiaremos en el proceso.
     </p>
-    <img src="https://cdn.pixabay.com/photo/2023/09/01/13/47/3d-print-8225535_960_720.png" alt="Figura personalizada 3D">
+    <img src="https://titan13toy.com/cdn/shop/files/B4E6B60B-3B2B-4225-A59F-CC31BC8B9764.png?v=1758336616&width=1946" alt="Figura personalizada 3D">
 
     <div class="figura-precio">
       💰 Precio estimado: entre $18.000 y $25.000 CLP (según nivel de detalle y tamaño)
@@ -274,4 +274,5 @@
   </script>
 </body>
 </html>
+
 
