--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PrinteX - IMPRESION3D</title>
+  <title>PrinteX - IMPRESIÓN 3D</title>
   <style>
     body {
       margin: 0;
@@ -14,7 +14,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
       min-height: 100vh;
       text-align: center;
     }
@@ -46,9 +45,6 @@
       text-align: center;
       max-width: 700px;
       margin-top: 30px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
     }
 
     p {
@@ -147,34 +143,70 @@
       color: #00c79c;
     }
 
-    /* NUEVA SECCIÓN DE PRODUCTO PERSONALIZADO */
-    .figura-personalizada {
-      margin-top: 80px;
-      background: linear-gradient(180deg, #ffffff, #f5fffb);
-      padding: 50px;
-      border-radius: 20px;
-      box-shadow: 0 0 30px rgba(0, 255, 200, 0.25);
-      max-width: 900px;
-      text-align: center;
-    }
-
-    .figura-personalizada h2 {
-      color: #00a884;
-      margin-bottom: 20px;
-    }
-
-    .figura-personalizada p {
-      color: #333;
+    .rebaja {
+      color: #ff5e5e;
+      font-weight: bold;
       font-size: 1.1rem;
-      margin-bottom: 30px;
     }
 
-    .figura-personalizada img {
-      width: 280px;
-      border-radius: 12px;
-      margin-top: 15px;
-      box-shadow: 0 0 20px rgba(0, 255, 180, 0.3);
+    .precio-tachado {
+      text-decoration: line-through;
+      color: #777;
+      margin-right: 10px;
     }
+
+   /* SECCIÓN FIGURA PERSONALIZADA */
+.figura-personalizada {
+  margin-top: 80px;
+  background: linear-gradient(180deg, #ffffff, #f5fffb);
+  padding: 50px;
+  border-radius: 20px;
+  box-shadow: 0 0 30px rgba(0, 255, 200, 0.25);
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* centra horizontalmente */
+  justify-content: center; /* centra verticalmente */
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.figura-personalizada h2 {
+  color: #00a884;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.figura-personalizada p {
+  color: #333;
+  font-size: 1.1rem;
+  margin-bottom: 30px;
+  text-align: center;
+  max-width: 700px;
+}
+
+.figura-personalizada img {
+  width: 280px;
+  border-radius: 12px;
+  margin-top: 15px;
+  box-shadow: 0 0 20px rgba(0, 255, 180, 0.3);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.figura-precio {
+  background: #eafff7;
+  border-radius: 10px;
+  padding: 15px 25px;
+  margin-top: 25px;
+  font-weight: bold;
+  color: #008060;
+  box-shadow: 0 0 10px rgba(0, 200, 150, 0.2);
+  display: inline-block;
+  text-align: center;
+}
 
     .figura-precio {
       background: #eafff7;
@@ -186,6 +218,34 @@
       box-shadow: 0 0 10px rgba(0, 200, 150, 0.2);
       display: inline-block;
     }
+
+    /* REDES SOCIALES */
+    .redes {
+      margin: 60px 0 40px;
+      text-align: center;
+    }
+
+    .redes h3 {
+      color: #00a884;
+      margin-bottom: 15px;
+    }
+
+    .redes a {
+      margin: 0 10px;
+      display: inline-block;
+      transition: transform 0.2s;
+    }
+
+    .redes a:hover {
+      transform: scale(1.1);
+    }
+
+    .redes img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+    }
+
   </style>
 </head>
 <body>
@@ -205,43 +265,41 @@
     <img src="https://titan13toy.com/cdn/shop/collections/Frame_1000007125.png?v=1756851164&width=1500" alt="Figura impresa 3D">
 
     <div class="producto-info">
-      <h2>Figura 3D Personalizada</h2>
+      <h2>Figura 3D Estándar</h2>
       <p>Pieza impresa con precisión y materiales de alta calidad. Ideal para coleccionistas o regalos personalizados.</p>
 
       <h3>Detalles Técnicos</h3>
       <ul>
-        <li>Peso: 60 g - 100 g (según personalización)</li>
+        <li>Peso: 60 g - 100 g</li>
         <li>Material: Filamento PETG</li>
         <li>Infill: 10-15% (ahorro) / 50-70% (resistencia)</li>
         <li>Perímetros: 2-3 mm</li>
       </ul>
 
-      <h3>Costos Estimados</h3>
-      <ul>
-        <li>Filamento: $800 - $1.300 CLP</li>
-        <li>Mano de obra: $7.000</li>
-        <li>Pintura y acabado: $2.000</li>
-        <li>Envío: $2.000</li>
-        <li><strong>Total estimado: $15.800 - $20.000 CLP</strong></li>
-      </ul>
+      <h3>Precio</h3>
+      <p>
+        <span class="precio-tachado">$20.000 CLP</span>
+        <span class="rebaja">15% OFF → $17.000 CLP</span>
+      </p>
     </div>
   </div>
 
   <!-- NUEVA SECCIÓN: FIGURA PERSONALIZADA -->
   <div class="figura-personalizada">
-    <h2>Producto / Figura Personalizada</h2>
+    <h2>Figura Personalizada</h2>
     <p>
-      ¿Quieres una figura completamente personalizada con tu rostro, tu personaje favorito o tu mascota?
+      ¿Quieres una figura completamente personalizada con tu rostro, tu personaje favorito o tu mascota?<br>
       En PrinteX realizamos figuras únicas desde cero. Envíanos tu idea y te guiaremos en el proceso.
     </p>
-    <img src="https://titan13toy.com/cdn/shop/files/B4E6B60B-3B2B-4225-A59F-CC31BC8B9764.png?v=1758336616&width=1946" alt="Figura personalizada 3D">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_720314-CBT80460883493_112024-O-suit-action-figures-dummy-13-dolls-t13-mission-13.webp" alt="Figura personalizada 3D">
 
     <div class="figura-precio">
-      💰 Precio estimado: entre $18.000 y $25.000 CLP (según nivel de detalle y tamaño)
+      💰 <span class="precio-tachado">$25.000 CLP</span> 
+      <span class="rebaja">20% OFF → desde $20.000 CLP</span>
     </div>
   </div>
 
-  <!-- SECCIÓN DE AYUDA (DEBAJO DEL PRODUCTO PERSONALIZADO) -->
+  <!-- SECCIÓN DE AYUDA -->
   <div class="info">
     <h2>¿Necesitas ayuda o quieres enviarnos tu diseño?</h2>
     <ul>
@@ -251,8 +309,16 @@
     </ul>
   </div>
 
-  <!-- BOTÓN DE COPIAR CORREO DEBAJO -->
+  <!-- BOTÓN DE COPIAR CORREO -->
   <a class="correo" id="copiarCorreo">Copiar correo de PrinteX</a>
+
+  <!-- REDES SOCIALES -->
+  <div class="redes">
+    <h3>🌐 Síguenos en redes</h3>
+    <a href="https://www.instagram.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"></a>
+    <a href="https://www.facebook.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"></a>
+    <a href="https://wa.me/56912345678" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp"></a>
+  </div>
 
   <script>
     const boton = document.getElementById('copiarCorreo');
@@ -274,5 +340,3 @@
   </script>
 </body>
 </html>
-
-
