--- a/index.html
+++ b/index.html
@@ -289,13 +289,13 @@
     <h2>Figura Personalizada</h2>
     <p>
       ¿Quieres una figura completamente personalizada con tu rostro, tu personaje favorito o tu mascota?<br>
-      En PrinteX realizamos figuras únicas desde cero. Envíanos tu idea y te guiaremos en el proceso.
+      En PrinteX realizamos figuras únicas desde cero. Envíanos tu idea y te guiaremos en el proceso, a lo cual el precio varia segun el coste de produccion de la figura.
     </p>
-    <img src="https://http2.mlstatic.com/D_NQ_NP_720314-CBT80460883493_112024-O-suit-action-figures-dummy-13-dolls-t13-mission-13.webp" alt="Figura personalizada 3D">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmi9Q3vD_NIO49WP9PnAQcUl3_aYxEaBjbzQ&s" alt="Figura personalizada 3D">
 
     <div class="figura-precio">
       💰 <span class="precio-tachado">$25.000 CLP</span> 
-      <span class="rebaja">20% OFF → desde $20.000 CLP</span>
+      <span class="rebaja">20% OFF → precio inicial desde $20.000 CLP</span>
     </div>
   </div>
 
@@ -340,3 +340,4 @@
   </script>
 </body>
 </html>
+
