--- a/index.html
+++ b/index.html
@@ -299,6 +299,17 @@
     </div>
   </div>
 
+  <!-- SECCIÓN DE MATERIALES -->
+  <div class="info">
+    <h2>Materiales utilizados: PETG y PLA</h2>
+    <ul>
+      <li><strong>PETG (Polietilentereftalato Glicol):</strong> Es un material resistente, flexible y duradero. Soporta mejor el calor que el PLA y ofrece una mayor resistencia al impacto, ideal para figuras más sólidas y piezas expuestas a uso frecuente.</li>
+      <li>El PETG es ligeramente más brillante y suave al tacto, además de ser menos propenso a quebrarse. También mantiene una buena estabilidad dimensional durante la impresión.</li>
+      <li><strong>PLA (Ácido Poliláctico):</strong> Es un material ecológico derivado del maíz o caña de azúcar. Es perfecto para figuras decorativas, prototipos y piezas con gran detalle. No presenta olores fuertes y permite acabados muy limpios.</li>
+      <li>Ambos materiales ofrecen excelente calidad de impresión, y seleccionamos el más adecuado según el tipo de figura o las preferencias del cliente.</li>
+    </ul>
+  </div>
+
   <!-- SECCIÓN DE AYUDA -->
   <div class="info">
     <h2>¿Necesitas ayuda o quieres enviarnos tu diseño?</h2>
@@ -340,4 +351,5 @@
   </script>
 </body>
 </html>
+
 
